5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1724_2527.log
== TEST (2019-05-14 10:33:52) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<=n:
	y=n%d
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:05) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<=n:
	y=n%d
	d=d+1
	print(y)
-- OUTPUT:
0
0
1
0
1
4
6
0
1
6
1
4
2
6
1
0
3
10
2
16
13
12
13
16
21
2
10
20
3
16
0
16
1
20
6
28
15
2
28
16
4
34
23
12
1
36
26
16
6
46
37
28
19
10
1
48
40
32
24
16
8
0
55
48
41
34
27
20
13
6
70
64
58
52
46
40
34
28
22
16
10
4
81
76
71
66
61
56
51
46
41
36
31
26
21
16
11
6
1
96
92
88
84
80
76
72
68
64
60
56
52
48
44
40
36
32
28
24
20
16
12
8
4
0
121
118
115
112
109
106
103
100
97
94
91
88
85
82
79
76
73
70
67
64
61
58
55
52
49
46
43
40
37
34
31
28
25
22
19
16
13
10
7
4
1
164
162
160
158
156
154
152
150
148
146
144
142
140
138
136
134
132
130
128
126
124
122
120
118
116
114
112
110
108
106
104
102
100
98
96
94
92
90
88
86
84
82
80
78
76
74
72
70
68
66
64
62
60
58
56
54
52
50
48
46
44
42
40
38
36
34
32
30
28
26
24
22
20
18
16
14
12
10
8
6
4
2
0
247
246
245
244
243
242
241
240
239
238
237
236
235
234
233
232
231
230
229
228
227
226
225
224
223
222
221
220
219
218
217
216
215
214
213
212
211
210
209
208
207
206
205
204
203
202
201
200
199
198
197
196
195
194
193
192
191
190
189
188
187
186
185
184
183
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:44:45) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<=n:
	y=n%d
	d=d+1
	print(y)
-- OUTPUT:
0
0
1
0
1
4
6
0
1
6
1
4
2
6
1
0
3
10
2
16
13
12
13
16
21
2
10
20
3
16
0
16
1
20
6
28
15
2
28
16
4
34
23
12
1
36
26
16
6
46
37
28
19
10
1
48
40
32
24
16
8
0
55
48
41
34
27
20
13
6
70
64
58
52
46
40
34
28
22
16
10
4
81
76
71
66
61
56
51
46
41
36
31
26
21
16
11
6
1
96
92
88
84
80
76
72
68
64
60
56
52
48
44
40
36
32
28
24
20
16
12
8
4
0
121
118
115
112
109
106
103
100
97
94
91
88
85
82
79
76
73
70
67
64
61
58
55
52
49
46
43
40
37
34
31
28
25
22
19
16
13
10
7
4
1
164
162
160
158
156
154
152
150
148
146
144
142
140
138
136
134
132
130
128
126
124
122
120
118
116
114
112
110
108
106
104
102
100
98
96
94
92
90
88
86
84
82
80
78
76
74
72
70
68
66
64
62
60
58
56
54
52
50
48
46
44
42
40
38
36
34
32
30
28
26
24
22
20
18
16
14
12
10
8
6
4
2
0
247
246
245
244
243
242
241
240
239
238
237
236
235
234
233
232
231
230
229
228
227
226
225
224
223
222
221
220
219
218
217
216
215
214
213
212
211
210
209
208
207
206
205
204
203
202
201
200
199
198
197
196
195
194
193
192
191
190
189
188
187
186
185
184
183
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:45:26) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<=n:
	y=n%d
	if (y==0)
	print(d)
	d=d+1
-- ERROR:
File "XXXX", line 6
    if (y==0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:45:31) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<=n:
	y=n%d
	if (y==0)
		print(d)
	d=d+1
-- ERROR:
File "XXXX", line 6
    if (y==0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:45:38) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<=n:
	y=n%d
	if (y==0):
		print(d)
	d=d+1
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:46:06) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
	d=d+1
-- OUTPUT:
1
2
4
8
16
31
62
124
248
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:31) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
	s=s+d
	d=d+1
print(s)
	
-- OUTPUT:
1
2
4
8
16
31
62
124
248
122760
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:07) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
	s=s+d
	d=d+1
print(s)
	
-- OUTPUT:
1
2
4
8
16
31
62
124
248
122760
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:54) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
		s=s+d
		print(s)
	d=d+1

	
-- OUTPUT:
1
1
2
3
4
7
8
15
16
31
31
62
62
124
124
248
248
496
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:09) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
		s=s+d
		print(s)
	d=d+1

	
-- OUTPUT:
1
1
2
3
4
7
8
15
16
31
31
62
62
124
124
248
248
496
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:04) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
		s=s+d
	print(s)
	d=d+1

	
-- OUTPUT:
1
1
2
3
3
4
7
7
7
7
8
15
15
15
15
15
15
15
15
16
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
31
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
62
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
124
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
248
496
496
496
496
496
496
496
496
496
496
496
496
496
496
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:17) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
		s=s+d
	print(d)
	d=d+1

	
-- OUTPUT:
1
1
2
2
3
4
4
5
6
7
8
8
9
10
11
12
13
14
15
16
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:28) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
		s=s+d

	d=d+1

	
-- OUTPUT:
1
2
4
8
16
31
62
124
248
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:53:10) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
		s=s+d
	d=d+1
print(s)
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:54:41) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
		s=s+d
	d=d+1
if s==n:
	print("PERFEITO")
elif s!=n:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:55:26) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
		s=s+d
	d=d+1
if s==n:
	print("PERFEITO")
elif s!=n:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:55:39) 
-- CODE:
n= int(input("insira um numero: "))
s=0
d=1
while d<n:
	y=n%d
	if (y==0):
		print(d)
		s=s+d
	d=d+1
if s==n:
	print("PERFEITO")
elif s!=n:
	print("NAO PERFEITO")
-- EXECUTION TIME:
0.189939
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
NAO PERFEITO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
